--- a/public/index.html
+++ b/public/index.html
@@ -32,24 +32,22 @@
          "autoPlay": true,
          "selectedAttraction": 0.1,
          "friction": 0.3 }'>
-         <div class="gallery-cell large-cells"></div>
-         <div class="gallery-cell large-cells"></div>
-         <div class="gallery-cell large-cells"></div>
-         <div class="gallery-cell large-cells"></div>
+         <div class="gallery-cell large-cells banner1"></div>
+         <div class="gallery-cell large-cells banner2"></div>
+         <div class="gallery-cell large-cells banner3"></div>
+         <div class="gallery-cell large-cells banner4"></div>
          
    </div>
 
    <div id="genres" class="gallery small js-flickity" data-flickity-options='{ "wrapAround": true }'>
-        <div class="gallery-cell"></div>
-        <div class="gallery-cell"></div>
-        <div class="gallery-cell"></div>
-        <div class="gallery-cell"></div>
-        <div class="gallery-cell"></div>
-        <div class="gallery-cell"></div>
-        <div class="gallery-cell"></div>
-        <div class="gallery-cell"></div>
-        <div class="gallery-cell"></div>
-        <div class="gallery-cell"></div>
+        <div class="gallery-cell proseImg"><p>פרוזה</p> </div>
+        <div class="gallery-cell romanceImg"><p>רומן</p></div>
+        <div class="gallery-cell historyImg"><p>היסטוריה</p></div>
+        <div class="gallery-cell thrillerImg"><p>מתח</p></div>
+        <div class="gallery-cell kidsImg"><p>ילדים</p></div>
+        <div class="gallery-cell jewImg"><p>יהדות</p></div>
+        <div class="gallery-cell biographyImg"><p>ביוגרפיה</p></div>
+
 
   </div>  
 
@@ -111,8 +109,6 @@
 
 <footer></footer>
   
-
-
     <script type="module"  src="./main.js"></script>
 
     <script src="https://kit.fontawesome.com/6391380adf.js" crossorigin="anonymous"></script>
