--- a/public/index.html
+++ b/public/index.html
@@ -49,26 +49,18 @@
         <div class="gallery-cell biographyImg"><p>ביוגרפיה</p></div>
 
   </div>  
-
-   <div id="recommended" class="gallery mid js-flickity" data-flickity-options='{ "wrapAround": true }'>
-        <div class="gallery-cell"></div>
-        <div class="gallery-cell"></div>
-        <div class="gallery-cell"></div>
-        <div class="gallery-cell"></div>
-        <div class="gallery-cell"></div>
-        <div class="gallery-cell"></div>
-        <div class="gallery-cell"></div>
-        <div class="gallery-cell"></div>
-        <div class="gallery-cell"></div>
-        <div class="gallery-cell"></div>
-
+  <div class="section-title">המומלצים שלנו</div>
+   <div id="recommendeds" class="gallery mid js-flickity" data-flickity-options='{ "wrapAround": true }'>
+       <div class="gallery-cell"></div>
+       <div class="gallery-cell"></div>
+       <div class="gallery-cell"></div>
+       <div class="gallery-cell"></div>
+       <div class="gallery-cell"></div>
+       <div class="gallery-cell"></div>
   </div>  
-  
-   <div id="sales" class="gallery large js-flickity" data-flickity-options='{ "wrapAround": true }'>
-        <div class="gallery-cell"></div>
-        <div class="gallery-cell"></div>
-        <div class="gallery-cell"></div>
-        <div class="gallery-cell"></div>
+  <div class="section-title">ספרים במבצע</div>
+
+   <div id="sales" class="gallery mid js-flickity" data-flickity-options='{ "wrapAround": true }'>
         <div class="gallery-cell"></div>
         <div class="gallery-cell"></div>
         <div class="gallery-cell"></div>
@@ -77,12 +69,9 @@
         <div class="gallery-cell"></div>
 
   </div>
+  <div class="section-title">ספרים חדשים</div>
 
-  <div id="sales" class="gallery mid js-flickity" data-flickity-options='{ "wrapAround": true }'>
-    <div class="gallery-cell"></div>
-    <div class="gallery-cell"></div>
-    <div class="gallery-cell"></div>
-    <div class="gallery-cell"></div>
+  <div id="new-books" class="gallery mid js-flickity" data-flickity-options='{ "wrapAround": true }'>
     <div class="gallery-cell"></div>
     <div class="gallery-cell"></div>
     <div class="gallery-cell"></div>
@@ -92,22 +81,70 @@
 
 </div>
 
-<div id="sales" class="gallery mid js-flickity" data-flickity-options='{ "wrapAround": true }'>
-    <div class="gallery-cell"></div>
-    <div class="gallery-cell"></div>
-    <div class="gallery-cell"></div>
-    <div class="gallery-cell"></div>
-    <div class="gallery-cell"></div>
-    <div class="gallery-cell"></div>
-    <div class="gallery-cell"></div>
-    <div class="gallery-cell"></div>
-    <div class="gallery-cell"></div>
-    <div class="gallery-cell"></div>
+<div id='signup-modal' class="modal display-none">
+    <form action="">
+        <div class="modal-title">יצירת חשבון חדש</div>
+        <input type="text" placeholder="שם">
+        <input type="number" placeholder="גיל">
+        <input type="email" placeholder="כתובת אימייל">
+        <input type="password" placeholder="סיסמא">
+        <button>הרשמה</button>
+        <p class="switch-title">כבר יש לך חשבון?</p>
 
+    </form>
+</div>
+<div id='login-modal' class="modal display-none">
+    <form action="">
+        <div class="modal-title">התחברות</div>
+        <input type="email" placeholder="כתובת אימייל">
+        <input type="password" placeholder="סיסמא">
+        <button>התחברות</button>
+        <p class="switch-title">עדיין אין לך חשבון?</p>
+
+    </form>
 </div>
 
-<footer></footer>
-  
+
+
+<div id="footer">
+    <div class="footer-element footer-contact">
+        <h4>תהיו בקשר...</h4>
+        <a>1111111111111</a>
+        <a>1111111111111</a>
+        <a>1111111111111</a>
+        <a>1111111111111</a>
+        <a>1111111111111</a>
+        <a>1111111111111</a>
+
+        
+    </div>
+    <div class="footer-element footer-daf-def">
+        <h4>דפדף</h4>
+        <a>אזור אישי</a>
+        <a>עזרה</a>
+        <a>משלוחים</a>
+        <a>אודות</a>
+    </div>
+    <div class="footer-element footer-genres">
+        <h4>קטגוריות</h4>
+        <a>רומן</a>
+        <a>פרוזה</a>
+        <a>יהדות</a>
+        <a>היסטוריה</a>
+        <a>מתח</a>
+        <a>ביוגרפיה</a>
+    </div>
+
+    <div class="footer-element footer-sales">
+        <h4>מבצעים</h4>
+        <a>ספרים במבצע</a>
+        <a>ספרים בחינם</a>
+        <a>אחד+אחד</a>
+        <a>מבצע חבר</a>
+    
+    </div>
+    <div class="credits"></div>
+</div>  
     <script type="module"  src="./main.js"></script>
 
     <script src="https://kit.fontawesome.com/6391380adf.js" crossorigin="anonymous"></script>
