--- a/public/index.html
+++ b/public/index.html
@@ -81,28 +81,29 @@
 
 </div>
 
-<div id='signup-modal' class="modal display-none">
-    <form action="">
+<div class="modal display-none">
+    <form class="display-none" action="">
+        <i class="fas fa-times"></i>
         <div class="modal-title">יצירת חשבון חדש</div>
         <input type="text" placeholder="שם">
         <input type="number" placeholder="גיל">
         <input type="email" placeholder="כתובת אימייל">
         <input type="password" placeholder="סיסמא">
         <button>הרשמה</button>
-        <p class="switch-title">כבר יש לך חשבון?</p>
+        <div id='switch-to-login' class="switch-title">כבר יש לך חשבון?</div>
 
     </form>
-</div>
-<div id='login-modal' class="modal display-none">
-    <form action="">
+
+    <form class="display-none" action="">
+        <i class="fas fa-times"></i>
         <div class="modal-title">התחברות</div>
         <input type="email" placeholder="כתובת אימייל">
         <input type="password" placeholder="סיסמא">
         <button>התחברות</button>
-        <p class="switch-title">עדיין אין לך חשבון?</p>
-
+        <div id='switch-to-signup' class="switch-title">עדיין אין לך חשבון?</div>
     </form>
 </div>
+
 
 
 
