--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,10 @@
         </div>
         <input class="main-search" placeholder="חיפוש לפי שם ספר או מחבר"></input>
         <div class="utils-container">
+            <div class="user-loggedin-tools display-none">
+                <div class="user-name"></div>
+                <div class="user-logout"></div>
+            </div>
             <i class="far fa-user"></i>
             <i class="far fa-heart"></i>
             <i class="fas fa-shopping-cart"></i>
@@ -95,7 +99,8 @@
         <input type="email" name="email" placeholder="כתובת אימייל">
         <input type="password" name="password" placeholder="סיסמא">
         <button class="disableSubmit">הרשמה</button>
-        <div id='switch-to-login' class="switch-title">כבר יש לך חשבון?</div>
+        <div id="switch-to-login" class="switch-title">כבר יש לך חשבון?</div>
+        <div id="sign-error-msg" class="error-msg display-none"></div>
     </form>
 
     <form class="display-none" action="">
@@ -104,7 +109,8 @@
         <input type="email" name="email" placeholder="כתובת אימייל">
         <input type="password" name="password" placeholder="סיסמא">
         <button class="disableSubmit">התחברות</button>
-        <div id='switch-to-signup' class="switch-title">עדיין אין לך חשבון?</div>
+        <div id="switch-to-signup" class="switch-title">עדיין אין לך חשבון?</div>
+        <div id="login-error-msg" class="error-msg display-none"></div>
     </form>
 </div>
 <div class="modal display-none">
@@ -141,18 +147,23 @@
 
 <div class="half-modal display-none">
     <div class="books-search-modal">
-        <div class="gallery-container">
             <i class="fas fa-times"></i>
             <div class="section-title">לא מצאנו ספרים שמתאימים לחיפוש...</div> 
-            <div id="searched-books" class="searched-books" >
-                 <!-- <div class="gallery-cell"></div>
-                 <div class="gallery-cell"></div>
-                 <div class="gallery-cell"></div>
-                 <div class="gallery-cell"></div>
-                 <div class="gallery-cell"></div>
-                 <div class="gallery-cell"></div> -->
+            <div id="searched-books-container" class="searched-books" >
+               
            </div>
+    </div>
+</div>
+
+
+<div class="modal display-none" id='cart-modal-bg'>
+    <div class="cart-modal display-none">
+        <i class="fas fa-times"></i>
+        <div class="title">עגלת קניות
+            <i class="fas fa-shopping-cart"></i>
         </div>
+        <div class="purchased-books-container"></div>
+        <div class="pay-btn">לתשלום</div>
     </div>
 </div>
 
