admin add book edit book ui and server (no logic)

--- a/public/index.html
+++ b/public/index.html
@@ -176,7 +176,7 @@
         <div class="purchased-books-container">
             
         </div>
-        <div class="pay-bill display-none">סה"כ לתשלום: 100 ש"ח</div>
+        <div class="pay-bill display-none">מביאים לך את הספרים, עוד רגע בבקשה...</div>
         <div class="pay-btn"> ביצוע תשלום</div>
     </div>
 </div>
