--- a/public/index.html
+++ b/public/index.html
@@ -135,8 +135,8 @@
             <div class="summery">
                 <h3 class="headline">תקציר הספר:</h3>
                 <p>"יש אי נוחות בשימוש במלה הזאת, יש בה כעין הודאה בחולשה. האם האחרים חשים כמוני, או שאני בעלת מיתר קרוע?"
-                    כך נפתח ספרה החדש של נורית זרחי בדידות או, ויש בו אכן טקסטים על בדידות, וגם על שפע של נושאים שמעסיקים את הסופרת הנפלאה הזאת, כמו בתים וכלבים וציפורים וגינות, והקיבוץ והציונות והאב והאם והאח והאחות, וגם שייקספיר והמלך ליר שלו, אבל לא הוא, אלא בנותיו: 
-                    "התבוננותי בשייקספיר," כותבת נורית זרחי בצניעות אופיינית, "מובן שאיננה מקיפה אפילו לא קמצוץ מן העניין. 
+                    כך נפתח ספרה החדש של נורית זרחי בדידות או, ויש בו אכן טקסטים על בדידות, וגם על שפע של נושאים שמעסיקים את הסופרת הנפלאה הזאת, כמו בתים וכלבים וציפורים וגינות אבל לא הוא, אלא בנותיו: 
+                  
                 </p>
                 <p class="pages-number"></p>
                 <P class="genre"></P>
